--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <a href="#pricing" class="hover:underline">Pricing</a>
       <a href="#features" class="hover:underline">Features</a>
       <a href="#support" class="hover:underline">Support</a>
-      <a href="login.html" class="px-4 py-2 bg-indigo-500 rounded text-white">Sign In</a>
+      <a href="signup.html" class="px-4 py-2 bg-indigo-500 rounded text-white">Sign Up</a>
     </nav>
     <button class="md:hidden px-3 py-2 bg-slate-800 rounded">Menu</button>
   </header>
 
   <!-- Hero -->
-  <section class="hero-bg py-16" id="products">
+  <section class="hero-bg py-16">
     <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
       <div>
         <h1 class="text-4xl md:text-5xl font-extrabold leading-tight">Fast & Secure Hosting for Minecraft & Discord Bots</h1>
@@ -72,7 +72,7 @@
     <!-- Minecraft Hosting -->
     <h3 class="mt-6 text-xl font-semibold">Minecraft Hosting</h3>
     <div class="mt-4 grid gap-6 grid-cols-1 md:grid-cols-3">
-      <!-- Dirt Plan -->
+      <!-- Dirt -->
       <article class="bg-gradient-to-br from-slate-800 to-slate-700 p-6 rounded-lg shadow hover:scale-105 transition-transform">
         <h4 class="text-lg font-semibold">Dirt</h4>
         <p class="text-slate-400 mt-2">1 GB RAM server, perfect for beginners.</p>
@@ -88,7 +88,7 @@
         <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
       </article>
 
-      <!-- Stone Plan -->
+      <!-- Stone -->
       <article class="bg-gradient-to-br from-slate-800 to-slate-700 p-6 rounded-lg shadow hover:scale-105 transition-transform">
         <h4 class="text-lg font-semibold">Stone</h4>
         <p class="text-slate-400 mt-2">2 GB RAM server for small groups.</p>
@@ -104,7 +104,7 @@
         <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
       </article>
 
-      <!-- Iron Plan -->
+      <!-- Iron -->
       <article class="bg-gradient-to-br from-slate-800 to-slate-700 p-6 rounded-lg shadow hover:scale-105 transition-transform">
         <h4 class="text-lg font-semibold">Iron</h4>
         <p class="text-slate-400 mt-2">4 GB RAM server for growing communities.</p>
@@ -121,7 +121,7 @@
         <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
       </article>
 
-      <!-- Diamond Plan -->
+      <!-- Diamond -->
       <article class="bg-gradient-to-br from-slate-800 to-slate-700 p-6 rounded-lg shadow hover:scale-105 transition-transform">
         <h4 class="text-lg font-semibold">Diamond</h4>
         <p class="text-slate-400 mt-2">8 GB RAM server for active communities.</p>
@@ -139,7 +139,7 @@
         <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
       </article>
 
-      <!-- Emerald Plan -->
+      <!-- Emerald -->
       <article class="bg-gradient-to-br from-slate-800 to-indigo-500 p-6 rounded-lg shadow hover:scale-105 transition-transform ring-1 ring-indigo-500">
         <h4 class="text-lg font-semibold">Emerald 12GB</h4>
         <p class="text-slate-200 mt-2">12 GB RAM server for large communities.</p>
@@ -158,7 +158,7 @@
         <div class="mt-4"><a class="inline-block px-4 py-2 bg-white text-indigo-800 rounded">Choose</a></div>
       </article>
 
-      <!-- Netherite Plan -->
+      <!-- Netherite -->
       <article class="bg-gradient-to-br from-indigo-900 to-purple-700 p-6 rounded-lg shadow hover:scale-105 transition-transform ring-2 ring-indigo-400">
         <h4 class="text-lg font-semibold">Netherite 16GB</h4>
         <p class="text-slate-200 mt-2">16 GB RAM server for massive communities and modded setups.</p>
