--- a/index.html
+++ b/index.html
@@ -64,11 +64,81 @@
     </div>
   </section>
 
-  <!-- Pricing (same as your original) -->
+  <!-- Pricing -->
   <section id="pricing" class="max-w-6xl mx-auto p-6 -mt-6">
     <h2 class="text-2xl font-bold mb-4">Hosting Plans</h2>
-    <!-- Minecraft & Discord Bot hosting cards here -->
-    <!-- Copy your original pricing cards from the old index.html -->
+
+    <!-- Minecraft Hosting -->
+    <h3 class="mt-6 text-xl font-semibold">Minecraft Hosting</h3>
+    <div class="mt-4 grid gap-6 grid-cols-1 md:grid-cols-3">
+      <!-- Dirt -->
+      <article class="bg-gradient-to-br from-slate-800 to-slate-700 p-6 rounded-lg shadow hover:scale-105 transition-transform">
+        <h4 class="text-lg font-semibold">Dirt</h4>
+        <p class="text-slate-400 mt-2">1 GB RAM server, perfect for beginners.</p>
+        <div class="mt-4 text-3xl font-bold">€1.99<span class="text-base font-normal">/mo</span></div>
+        <ul class="mt-4 text-slate-300 space-y-1">
+          <li>1 GB DDR4 RAM</li>
+          <li>20 GB NVMe SSD</li>
+          <li>2 vCores</li>
+          <li>DDoS Protection</li>
+          <li>Unlimited Player Slots</li>
+          <li>Full FTP Access</li>
+        </ul>
+        <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
+      </article>
+
+      <!-- Stone -->
+      <article class="bg-gradient-to-br from-slate-800 to-slate-700 p-6 rounded-lg shadow hover:scale-105 transition-transform">
+        <h4 class="text-lg font-semibold">Stone</h4>
+        <p class="text-slate-400 mt-2">2 GB RAM server for small groups.</p>
+        <div class="mt-4 text-3xl font-bold">€3.99<span class="text-base font-normal">/mo</span></div>
+        <ul class="mt-4 text-slate-300 space-y-1">
+          <li>2 GB DDR4 RAM</li>
+          <li>25 GB NVMe SSD</li>
+          <li>3 vCores</li>
+          <li>DDoS Protection</li>
+          <li>Unlimited Player Slots</li>
+          <li>Free MySQL Database</li>
+        </ul>
+        <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
+      </article>
+
+      <!-- Iron -->
+      <article class="bg-gradient-to-br from-slate-800 to-slate-700 p-6 rounded-lg shadow hover:scale-105 transition-transform">
+        <h4 class="text-lg font-semibold">Iron</h4>
+        <p class="text-slate-400 mt-2">4 GB RAM server for growing communities.</p>
+        <div class="mt-4 text-3xl font-bold">€5.99<span class="text-base font-normal">/mo</span></div>
+        <ul class="mt-4 text-slate-300 space-y-1">
+          <li>4 GB DDR4 RAM</li>
+          <li>35 GB NVMe SSD</li>
+          <li>4 vCores</li>
+          <li>DDoS Protection</li>
+          <li>Unlimited Player Slots</li>
+          <li>Free MySQL Database</li>
+          <li>Free Backups</li>
+        </ul>
+        <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
+      </article>
+    </div>
+
+    <!-- Discord Bot Hosting -->
+    <h3 class="mt-8 text-xl font-semibold">Discord Bot Hosting</h3>
+    <div class="mt-4 grid gap-6 grid-cols-1 md:grid-cols-4">
+      <!-- Starter 256MB -->
+      <article class="bg-slate-800 p-6 rounded-lg shadow hover:scale-105 transition-transform">
+        <h4 class="text-lg font-semibold">Starter 256MB</h4>
+        <p class="text-slate-400 mt-2">256MB RAM Discord bot hosting.</p>
+        <div class="mt-4 text-3xl font-bold">€0.99<span class="text-base font-normal">/mo</span></div>
+        <ul class="mt-4 text-slate-300 space-y-1">
+          <li>256 MB RAM</li>
+          <li>1 vCore</li>
+          <li>2 GB SSD</li>
+          <li>DDoS Protection</li>
+          <li>24/7 Uptime</li>
+        </ul>
+        <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
+      </article>
+    </div>
   </section>
 
   <!-- Footer -->
@@ -102,13 +172,4 @@
 
     userBtn.addEventListener('contextmenu', (e) => {
       e.preventDefault();
-      if (localStorage.getItem('username')) {
-        if (confirm('Log out?')) {
-          localStorage.removeItem('username');
-          updateUserButton();
-        }
-      }
-    });
-  </script>
-</body>
-</html>
+      if (local
