--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>MineDime Hosting — Minecraft & Discord Bot Hosting</title>
+  <meta name="description" content="Fast, reliable Minecraft server hosting & Discord bot hosting with 24/7 support." />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .hero-bg { background: linear-gradient(135deg, #0f172a 0%, #0b1220 50%, #071022 100%); }
@@ -22,7 +23,7 @@
       <a href="#pricing" class="hover:underline">Pricing</a>
       <a href="#features" class="hover:underline">Features</a>
       <a href="#support" class="hover:underline">Support</a>
-      <a id="userBtn" href="login.html" class="px-4 py-2 bg-indigo-500 rounded text-white">Sign In</a>
+      <a id="userBtn" href="signup.html" class="px-4 py-2 bg-indigo-500 rounded text-white">Sign Up</a>
     </nav>
     <button class="md:hidden px-3 py-2 bg-slate-800 rounded">Menu</button>
   </header>
@@ -119,12 +120,67 @@
         </ul>
         <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
       </article>
+
+      <!-- Diamond -->
+      <article class="bg-gradient-to-br from-slate-800 to-slate-700 p-6 rounded-lg shadow hover:scale-105 transition-transform">
+        <h4 class="text-lg font-semibold">Diamond</h4>
+        <p class="text-slate-400 mt-2">8 GB RAM server for active communities.</p>
+        <div class="mt-4 text-3xl font-bold">€9.99<span class="text-base font-normal">/mo</span></div>
+        <ul class="mt-4 text-slate-300 space-y-1">
+          <li>8 GB DDR4 RAM</li>
+          <li>50 GB NVMe SSD</li>
+          <li>6 vCores</li>
+          <li>DDoS Protection</li>
+          <li>Unlimited Player Slots</li>
+          <li>Free MySQL Database</li>
+          <li>Daily Backups</li>
+          <li>Priority Support</li>
+        </ul>
+        <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
+      </article>
+
+      <!-- Emerald -->
+      <article class="bg-gradient-to-br from-slate-800 to-indigo-500 p-6 rounded-lg shadow hover:scale-105 transition-transform ring-1 ring-indigo-500">
+        <h4 class="text-lg font-semibold">Emerald 12GB</h4>
+        <p class="text-slate-200 mt-2">12 GB RAM server for large communities.</p>
+        <div class="mt-4 text-3xl font-bold">€14.99<span class="text-base font-normal">/mo</span></div>
+        <ul class="mt-4 text-slate-200 space-y-1">
+          <li>12 GB DDR4 RAM</li>
+          <li>75 GB NVMe SSD</li>
+          <li>8 vCores</li>
+          <li>DDoS Protection</li>
+          <li>Unlimited Player Slots</li>
+          <li>Free MySQL Database</li>
+          <li>Hourly Backups</li>
+          <li>Priority Discord Support</li>
+          <li>Free Dedicated IP (optional)</li>
+        </ul>
+        <div class="mt-4"><a class="inline-block px-4 py-2 bg-white text-indigo-800 rounded">Choose</a></div>
+      </article>
+
+      <!-- Netherite -->
+      <article class="bg-gradient-to-br from-indigo-900 to-purple-700 p-6 rounded-lg shadow hover:scale-105 transition-transform ring-2 ring-indigo-400">
+        <h4 class="text-lg font-semibold">Netherite 16GB</h4>
+        <p class="text-slate-200 mt-2">16 GB RAM server for massive communities and modded setups.</p>
+        <div class="mt-4 text-3xl font-bold">€19.99<span class="text-base font-normal">/mo</span></div>
+        <ul class="mt-4 text-slate-200 space-y-1">
+          <li>16 GB DDR4 RAM</li>
+          <li>100 GB NVMe SSD</li>
+          <li>10 vCores</li>
+          <li>DDoS Protection</li>
+          <li>Unlimited Player Slots</li>
+          <li>Free MySQL Database</li>
+          <li>Hourly Backups</li>
+          <li>Premium Discord Support</li>
+          <li>Free Dedicated IP (optional)</li>
+        </ul>
+        <div class="mt-4"><a class="inline-block px-4 py-2 bg-white text-indigo-800 rounded">Choose</a></div>
+      </article>
     </div>
 
     <!-- Discord Bot Hosting -->
     <h3 class="mt-8 text-xl font-semibold">Discord Bot Hosting</h3>
     <div class="mt-4 grid gap-6 grid-cols-1 md:grid-cols-4">
-      <!-- Starter 256MB -->
       <article class="bg-slate-800 p-6 rounded-lg shadow hover:scale-105 transition-transform">
         <h4 class="text-lg font-semibold">Starter 256MB</h4>
         <p class="text-slate-400 mt-2">256MB RAM Discord bot hosting.</p>
@@ -133,6 +189,45 @@
           <li>256 MB RAM</li>
           <li>1 vCore</li>
           <li>2 GB SSD</li>
+          <li>DDoS Protection</li>
+          <li>24/7 Uptime</li>
+        </ul>
+        <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
+      </article>
+      <article class="bg-slate-800 p-6 rounded-lg shadow hover:scale-105 transition-transform">
+        <h4 class="text-lg font-semibold">Basic 512MB</h4>
+        <p class="text-slate-400 mt-2">512MB RAM Discord bot hosting.</p>
+        <div class="mt-4 text-3xl font-bold">€1.99<span class="text-base font-normal">/mo</span></div>
+        <ul class="mt-4 text-slate-300 space-y-1">
+          <li>512 MB RAM</li>
+          <li>1 vCore</li>
+          <li>5 GB SSD</li>
+          <li>DDoS Protection</li>
+          <li>24/7 Uptime</li>
+        </ul>
+        <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
+      </article>
+      <article class="bg-slate-800 p-6 rounded-lg shadow hover:scale-105 transition-transform">
+        <h4 class="text-lg font-semibold">Advanced 1GB</h4>
+        <p class="text-slate-400 mt-2">1GB RAM Discord bot hosting.</p>
+        <div class="mt-4 text-3xl font-bold">€3.49<span class="text-base font-normal">/mo</span></div>
+        <ul class="mt-4 text-slate-300 space-y-1">
+          <li>1 GB RAM</li>
+          <li>2 vCores</li>
+          <li>10 GB SSD</li>
+          <li>DDoS Protection</li>
+          <li>24/7 Uptime</li>
+        </ul>
+        <div class="mt-4"><a class="inline-block px-4 py-2 bg-indigo-500 rounded">Choose</a></div>
+      </article>
+      <article class="bg-slate-800 p-6 rounded-lg shadow hover:scale-105 transition-transform">
+        <h4 class="text-lg font-semibold">Premium 2GB</h4>
+        <p class="text-slate-400 mt-2">2GB RAM Discord bot hosting.</p>
+        <div class="mt-4 text-3xl font-bold">€5.99<span class="text-base font-normal">/mo</span></div>
+        <ul class="mt-4 text-slate-300 space-y-1">
+          <li>2 GB RAM</li>
+          <li>3 vCores</li>
+          <li>15 GB SSD</li>
           <li>DDoS Protection</li>
           <li>24/7 Uptime</li>
         </ul>
@@ -164,12 +259,22 @@
         userBtn.textContent = username;
         userBtn.href = '#';
       } else {
-        userBtn.textContent = 'Sign In';
-        userBtn.href = 'login.html';
+        userBtn.textContent = 'Sign Up';
+        userBtn.href = 'signup.html';
       }
     }
     updateUserButton();
 
     userBtn.addEventListener('contextmenu', (e) => {
       e.preventDefault();
-      if (local
+      if (localStorage.getItem('username')) {
+        if (confirm('Log out?')) {
+          localStorage.removeItem('username');
+          updateUserButton();
+        }
+      }
+    });
+  </script>
+
+</body>
+</html>
